src/rfx/tests/preprocessor/Error.approved.out
exit_status:0
output:
Source output:
    #line 1 "D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/Error.rfx"
    
Diagnostic output:
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/Error.rfx:10:2: error: This isn't valid!
    #error This isn't valid!
     ^
